[package]
name = "kianalol"
version = "0.0.0"
description = ""
authors = ["Xiaohua Zhang"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-create", "window-maximize", "window-hide", "window-close", "window-set-size", "window-show", "window-start-dragging", "window-unminimize", "window-minimize", "window-unmaximize", "window-set-focus", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-exists", "fs-write-file", "path-all", "shell-open", "global-shortcut-all", "macos-private-api", "system-tray"] }

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = {version = "0.22.3"}
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.24.1" }
objc =  { version = "0.2.7" }
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
